# trs-ssp-verif

./: .gitignore  LICENSE  README.md  dune-project  ssp_verification.opam
examples/ex1/: config.json  runme.sh
examples/ex2/: config.json  runme.sh  trans_normed.csv
lib/: common.ml  dune  frontend.ml  frontend.mli  phase1.ml  phase1.mli  phase2.ml  phase2.mli  phase3.ml  phase3.mli  phase4.ml  phase4.mli  state_space.ml  ui.ml  visjs.ml  visjs.mli
test/: dune  exmp_1_walk.csv  exmp_2_trans_normed.csv  exmp_2_walk.csv  exmp_3_states.csv  exmp_3_trans.csv  exmp_3_walk.csv  phase1_basic_transformers_tests.ml  phase1_buildin_transformers_tests.ml  phase1_tests.ml  phase2_tests.ml  phase3_tests.ml  phase3_tests_data.ml  phase4_tests.ml  phase4_tests_data.ml  ui_tests.ml  visjs_tests.ml
