(
    tests
    (names
        ui_tests
        phase4_tests
        phase3_tests
        phase2_tests
        phase1_tests
        phase1_basic_transformers_tests
        visjs_tests
    )
    (preprocess (pps ppx_yojson_conv ppx_deriving.show))
    (libraries ounit2 ssp_verification tracking_bigraph )
)